--- a/templates/sdk-banner.html
+++ b/templates/sdk-banner.html
@@ -23,6 +23,7 @@
             margin: 0;
             padding: 0;
             background-color: transparent;
+            font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
         }
 
         #content {
