--- a/templates/sdk-interstital-half-size.html
+++ b/templates/sdk-interstital-half-size.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
     <style>
         *,
         *:active,
@@ -29,6 +29,7 @@
             -webkit-justify-content: center;
             align-items: center;
             -webkit-align-items: center;
+            font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
         }
 
         html {
