--- a/templates/sdk-native.html
+++ b/templates/sdk-native.html
@@ -30,6 +30,7 @@
             padding: 0;
             background-color: transparent;
             color: #000000;
+            font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
         }
 
         #content {
