--- a/templates/sdk-video.html
+++ b/templates/sdk-video.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui"
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover"
         name="viewport">
     <style>
         *,
@@ -26,6 +26,7 @@
             height: 100%;
             overflow: hidden;
             background-color: #000000;
+            font-family: "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
         }
 
         a {
